PRO-92: add create race